Connect button to form and fix some layout issues

--- a/styles.css
+++ b/styles.css
@@ -36,31 +36,35 @@ p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
 
-p {
-  text-wrap: pretty;
-}
 h1, h2, h3, h4, h5, h6 {
   text-wrap: balance;
 }
 
 
 /* Main CSS */
+html {
+    height: 100%;
+}
 
 body {
     display: flex;
+    height: 100%;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: rgb(52, 52, 52);
+    /* background-color: rgb(250, 248, 245); */
+    background-color: black;
 }
 
 /* Left section of page */
 
 .left-section {
     display: flex;
+    flex: 1;
     flex-direction: column;
     width: 40%;
-    min-height: 100vh;
+    height: auto;
     background-image: url(background-image.jpg);
-    background-color: rgb(32, 67, 126);
+    background-color: #20437e;
     background-size: cover;
 }
 
@@ -109,7 +113,7 @@ h1 {
     display: flex;
     flex-direction: column;
     width: 60%;
-    min-height: 100vh;
+    height: auto;
     background-color: rgb(250, 248, 245);
 }
 
@@ -127,9 +131,9 @@ h1 {
 
 form {
     display: flex;
-    min-height: 30%;
+    height: auto;
     background-color: rgb(255, 255, 255);
-    padding: 18px 40px 35px 40px;
+    padding: 20px 40px 60px 40px;
     gap: 15px 70px;
     flex-wrap: wrap;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 10%);
@@ -144,6 +148,7 @@ h2 {
 .form-field {
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 label, input {
@@ -177,6 +182,7 @@ input + div {
     font-size: 0.75rem;
     display: none;
     position: absolute;
+    top: 100%;
 }
 
 input:focus + div {
@@ -218,20 +224,22 @@ button:active {
     .left-section {
         width: auto;
         min-height: unset;
+        height: 18vh;
         background-image: linear-gradient(rgba(32, 67, 126), rgb(37, 91, 144));
-        background-image: none;
         background-size: auto;
     }
     .logo {
         width: auto;
-        height: 18vh;
+        height: 100%;
         padding: 40px 0px;
         gap: 2%;
         background: none;
+        position: unset;
     }
     #odin-logo {
-        max-height: 150%;
-        max-width: 150%;
+        max-height: unset;
+        max-width: unset;
+        width: 80px;
     }
     .image-credit {
         display: none;
@@ -246,11 +254,14 @@ button:active {
     }
     .call-to-action {
         width: auto;
+        min-height: unset;
         text-align: center;
+        flex-basis: content;
+        justify-content: unset;
         padding: 50px 50px;
     }
     form {
-        min-height: 30%;
+        height: 100%;
         flex-direction: column;
         align-items: center;
         gap: 24px;
